Revision history for Perl extension Inline-Ruby.

    - Some compatibility with ruby-1.9.x and POD fixes.
        - Add t/pod.t and t/pod-coverage.t.

0.04        Sat  1 Sep 19:38:36 IDT 2012
    - Start integrating the patch from
        https://rt.cpan.org/Public/Bug/Display.html?id=32536 for compatibility
        with ruby-1.9.x/etc.
        - Applied it semi-manually to Makefile.PL, and to the .xs and .c files.

0.03        Thu  9 Aug 22:42:29 IDT 2012
    - RELEASE: Inline-Ruby-0.03
    - Got the tests to pass with recent perls and Ruby-1.8.7.
    - Some cleanups to Ruby.pm and the test suite.
    - Moved test.pl under examples/inline-ruby-test.pl so it won't interfere.

0.01 Sat Jan 12 00:14:11 PST 2002	@60
	- RELEASE: Inline-Ruby-0.01
	- Use $Config{path_sep} for splitting $ENV{PATH} in Makefile.PL
	- Exit with an error message if Ruby not found on the PATH.
	- Remove eval_ruby().
	- Add a '\n' to Inline::Ruby::Exception::to_str.
	- Finished documentation.
	- Added supporting #ifdefs for 5.005_03 support

0.01  Wed Jan  9 09:46:30 PST 2002	@51
	- Created a PerlProc class, which is like Ruby's Proc class: it wraps
	  closures. Ruby Procs are not allowed to call 'yield', which means
	  passing them blocks has no meaning. That makes them very useful for
	  holding Perl closures.
	- Added two new config parameters: REGEX(P) and BIND_TYPE(S). You can
	  tell Inline::Ruby what types you want it to bind to: classes,
	  modules, and functions being the choices. You can also provide a
	  regular expression, which classes, modules, and function names must
	  match.
	- Added more tests to prove that those all work.
	- Added a samples/tk/ directory, and wrote a simple Ruby Tk app to
	  demonstrate the PerlProc class in action.

0.01  Tue Jan  8 04:38:59 PST 2002	@50
	- Created a PerlException class to give Ruby information about Perl
	  errors that occur within Perl subs or callbacks.
	- Make sure that Inline::Ruby clears $@ if any call was successful.