@@ -2,6 +2,8 @@ Revision history for Perl extension Inline-Ruby.
 
     - Some compatibility with ruby-1.9.x and POD fixes.
         - Add t/pod.t and t/pod-coverage.t.
+    - Fix warnings and failures in recent (5.18.x) perls due to
+      redefined packages and methods.
 
 0.04        Sat  1 Sep 19:38:36 IDT 2012
     - Start integrating the patch from
